--- a/kaianga.conf
+++ b/kaianga.conf
@@ -8,12 +8,13 @@
         prompt = true
         script = ["bin/package-update"]
 
-[packages-git]
+
+[packages-alttab]
     pre-reqs = ["packages-refresh.scripts"]
-    [[packages-git.scripts]]
+    [[packages-alttab.scripts]]
         root = true
         prompt = true
-        script = ["bin/packages", "git"]
+        script = ["bin/packages", "alttab"]
 
 [packages-curl]
     pre-reqs = ["packages-refresh.scripts"]
@@ -28,6 +29,20 @@
         root = true
         prompt = true
         script = ["bin/packages", "emacs"]
+        
+[packages-git]
+    pre-reqs = ["packages-refresh.scripts"]
+    [[packages-git.scripts]]
+        root = true
+        prompt = true
+        script = ["bin/packages", "git"]
+        
+[packages-inotify]
+    pre-reqs = ["packages-refresh.scripts"]
+    [[packages-inotify.scripts]]
+        root = true
+        prompt = true
+        script = ["bin/packages", "inotify-tools"]
 
 [packages-python3]
     pre-reqs = ["packages-refresh.scripts"]
@@ -42,13 +57,6 @@
         root = true
         prompt = true
         script = ["bin/packages", "python3-pip"]
-
-[packages-inotify]
-    pre-reqs = ["packages-refresh.scripts"]
-    [[packages-inotify.scripts]]
-        root = true
-        prompt = true
-        script = ["bin/packages", "inotify-tools"]
 
 [packages-stow]
     pre-reqs = ["packages-refresh.scripts"]
@@ -82,6 +90,12 @@
         root = true
         prompt = false
         script = ["bin/get-install-spacemacs-font"]
+
+[alttab-launch]
+    pre-reqs = ["packages-alttab.scripts"] 
+    [[alttab.scripts]]
+        prompt = false
+        script = ["alttab"]
 
 # [setup-user]
 # if user doesn't exist then do it.
