Adds xwit - not tested

--- a/kaianga.conf
+++ b/kaianga.conf
@@ -72,6 +72,13 @@
         prompt = true
         script = ["bin/packages", "wget"]
 
+[packages-xwit]
+    pre-reqs = ["packages-refresh.scripts"]
+    [[packages-xwit.scripts]]
+        root = true
+        prompt = true
+        script = ["bin/packages", "xwit"]
+
 [packages-others]
     pre-reqs = ["packages-refresh.scripts"]
     [[packages-others.scripts]]
