Uses new idempotent emacs server launch - not tested

--- a/kaianga.conf
+++ b/kaianga.conf
@@ -164,7 +164,7 @@
     [[emacs-daemon.scripts]]
         prompt = false
         priorit = 0
-        script = ["emacs", "--daemon", "--chdir", "~/"] 
+        script = ["bin/idemp_emacs_srv", "--chdir", "~/"] 
 
 [gitwatch-install]
     pre-reqs = ["ssh-key-to-gh.scripts", "packages-inotify.scripts"]
