--- a/kaianga.conf
+++ b/kaianga.conf
@@ -102,7 +102,7 @@
     pre-reqs = ["packages-alttab.scripts"] 
     [[alttab.scripts]]
         prompt = false
-        no_wait = True
+        no_wait = true
         script = ["~/kaianga-conf/bin/alttab_start"]
 
 # [setup-user]
