# This is a combination of 14 commits. # This is the 1st commit message:
Scripted auto-commit on change (2020-11-02 06:42:39) by gitwatch.sh

# This is the commit message #2:

Scripted auto-commit on change (2020-11-02 06:43:26) by gitwatch.sh

# This is the commit message #3:

Scripted auto-commit on change (2020-11-02 06:44:03) by gitwatch.sh

# This is the commit message #4:

Scripted auto-commit on change (2020-11-02 06:44:10) by gitwatch.sh

# This is the commit message #5:

Scripted auto-commit on change (2020-11-02 06:44:36) by gitwatch.sh

# This is the commit message #6:

Scripted auto-commit on change (2020-11-02 06:45:54) by gitwatch.sh

# This is the commit message #7:

Scripted auto-commit on change (2020-11-02 06:49:03) by gitwatch.sh

# This is the commit message #8:

Scripted auto-commit on change (2020-11-02 06:49:21) by gitwatch.sh

# This is the commit message #9:

Scripted auto-commit on change (2020-11-02 07:25:25) by gitwatch.sh

# This is the commit message #10:

Scripted auto-commit on change (2020-11-02 07:26:16) by gitwatch.sh

# This is the commit message #11:

Scripted auto-commit on change (2020-11-02 07:28:00) by gitwatch.sh

# This is the commit message #12:

Scripted auto-commit on change (2020-11-02 07:32:02) by gitwatch.sh

# This is the commit message #13:

Scripted auto-commit on change (2020-11-02 07:38:58) by gitwatch.sh

# This is the commit message #14:

Scripted auto-commit on change (2020-11-02 07:44:49) by gitwatch.sh

--- a/kainga.conf
+++ b/kainga.conf
@@ -174,7 +174,7 @@
     [[ssh-key-to-gh.scripts]]
         prompt = true
         priority = 1
-        script = ["bin/ghak", "-f", "~/.ssh/id_rsa.pub"]
+        script = ["bin/ghak", "-s", "-f", "~/.ssh/id_rsa.pub"]
 
 
 # These other repos can be run at any time but if we don't have an SSH
